--- a/twitter-bootstrap-step-by-step.org
+++ b/twitter-bootstrap-step-by-step.org
@@ -1,21 +1,250 @@
-* Install gems
-  - twitter-bootstrap-rails
-  - less-rails
-* TODO [8/9] Daniel Kehoe / bootstrap-sass (http://railsapps.github.io/twitter-bootstrap-rails.html )
-  1. [X] Generate a skeletal Rails application bootstap-kehoe.troywill.info
-     1. [X] rails new command
+* Resources
+** Twitter Bootstrap
+   - http://twitter.github.com/bootstrap/
+   - [[http://en.wikipedia.org/wiki/Twitter_Bootstrap][Twitter Bootstrap]] from Wikipedia
+   - Zipfile => http://twitter.github.io/bootstrap/assets/bootstrap.zip
+** Videos
+   - http://railscasts.com/episodes/328-twitter-bootstrap-basics
+** Gems
+*** bootstrap-sass
+    - GitHub thomas-mcdonald [[https://github.com/thomas-mcdonald/bootstrap-sass][bootstrap-sass]]
+*** twitter-bootstrap-rails
+   - https://github.com/seyhunak/twitter-bootstrap-rails
+** Tutorials
+   - http://railsapps.github.io/twitter-bootstrap-rails.html
+* [100%] Twitter Bootstrap with Ruby on Rails from Zipfile
+  1. [X] cd ../tmp && wget http://twitter.github.io/bootstrap/assets/bootstrap.zip
+  2. [X] copy javascripts, css, and images
+  3. [X] backup application.html.erb
+  4. [ ] cp Twitter's Example
+     #+BEGIN_SRC html
+       http://twitter.github.io/bootstrap/examples/starter-template.html
+     #+END_SRC
+     
+* Twitter Bootstrap with Ruby on Rails  https://github.com/seyhunak/twitter-bootstrap-rails
+** [9/11] Generate a skeletal Rails application with twitter-bootstrap-rails gem
+   1. [X] Run the rails new command
+      #+BEGIN_SRC sh
+       	rails new bootstrap
+      #+END_SRC
+   2. [X] Enable a JavaScript runtime in [[file:../Gemfile][Gemfile]]
+       	#+BEGIN_SRC conf
+          # See https://github.com/sstephenson/execjs#readme for more supported runtimes
+          gem 'therubyracer', platforms: :ruby
+       	#+END_SRC
+   3. [X] Add twitter-bootstrap-rails to [[file:../Gemfile][Gemfile]]
+      #+BEGIN_SRC conf
+        # gem 'twitter-bootstrap-rails', :git => 'git://github.com/seyhunak/twitter-bootstrap-rails.git'
+       	gem 'twitter-bootstrap-rails'
+       	gem 'less-rails'
+      #+END_SRC
+   4. [X] Run `bundle install`
+      #+BEGIN_SRC sh
+        bundle install
+      #+END_SRC
+   5. [X] Then run the bootstrap generator to add Bootstrap includes into your assets:
+      #+BEGIN_SRC sh
+        rails generate bootstrap:install less
+      #+END_SRC
+      #+BEGIN_EXAMPLE
+              insert  app/assets/javascripts/application.js
+              create  app/assets/javascripts/bootstrap.js.coffee
+              create  app/assets/stylesheets/bootstrap_and_overrides.css.less
+              create  config/locales/en.bootstrap.yml
+                gsub  app/assets/stylesheets/application.css
+                gsub  app/assets/stylesheets/application.css
+      #+END_EXAMPLE
+   6. [X] generate a scaffold
+      #+BEGIN_SRC sh :tangle bin/generate-scaffold-reading.sh :shebang #!/bin/bash
+        rails generate scaffold reading \
+            weight:decimal \
+            reading_time:datetime \
+            note:text \
+            --skip-stylesheets
+      #+END_SRC
+   7. [X] migrate the database
+   8. [X] default route file:../config/routes.rb
+      #+BEGIN_SRC ruby
+          root 'readings#index'
+      #+END_SRC
+   9. [ ] Generate a Fixed Layout
+      #+BEGIN_SRC sh
+        rails generate bootstrap:layout application fixed
+      #+END_SRC
+   10. [ ] file:../app/assets/
+   11. [X] restart server
+
+*** [0/5] Improve the layout
+   1. [ ] Wrap the content in a fixed width layout in [[file:../app/views/layouts/application.html.erb][application.html.erb]]
+      #+BEGIN_SRC html
+       	<body>
+          <div class="container">
+            <%= yield %>
+          </div>
+       	</body>
+      #+END_SRC
+   2. [ ] Add a sidebar with a row div in [[file:../app/views/layouts/application.html.erb][application.html.erb]]
+      #+BEGIN_SRC html
+       	<body>
+          <div class="container">
+            <div class="row">
+              <div class="span9"><%= yield %></div>
+              <div class="span3">
+              <h2>About Us</h2>
+              </div>
+            </div>
+          </div>
+       	</body>
+      #+END_SRC
+   3. [ ] Add a navigation bar in [[file:../app/views/layouts/application.html.erb][application.html.erb]]
+      - place directly after body tab
+      #+BEGIN_SRC html
+       	<div class="navbar navbar-fixed-top">
+          <div class="navbar-inner">
+            <div class="container">
+              <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+               	<span class="icon-bar"></span>
+               	<span class="icon-bar"></span>
+               	<span class="icon-bar"></span>
+              </a>
+              <a class="brand" href="#">Some Store</a>
+              <div class="nav-collapse">
+               	<ul class="nav">
+                  <li><%= link_to "List Weights", readings_path %></li>
+                  <li><%= link_to "Goals", readings_path %></li>
+                  <li><%= link_to "3 day graph", readings_path %></li>
+                  <li><%= link_to "7 day graph", readings_path %></li>
+               	</ul>
+              </div>
+            </div>
+          </div>
+       	</div>
+      #+END_SRC
+   4. [ ] Add 60 pixels in [[file:../app/assets/stylesheets/bootstrap_and_overrides.css.less][bootstrap_and_overrides.css.less]]
+      #+BEGIN_SRC css
+       	@import "twitter/bootstrap/bootstrap";
+       	body { padding-top: 60px; }
+       	@import "twitter/bootstrap/responsive";
+      #+END_SRC
+   5. [ ] scaffold views
+      #+BEGIN_SRC sh
+       	rails generate bootstrap:themed reading 
+      #+END_SRC
+** TODO [0/7] Generate a skeletal Rails application with bootstrap-sass gem
+   1. [ ] Install gems
+      #+BEGIN_SRC sh
+       	sudo gem install bootstrap-sass
+      #+END_SRC
+   2. [ ] Run the rails new command
+      #+BEGIN_SRC sh
+       	rails new bootstrap-sass
+      #+END_SRC
+   3. [ ] Enable a JavaScript runtime in [[file:../Gemfile][Gemfile]]
+       	#+BEGIN_SRC conf
+          # See [[https://github.com/sstephenson/execjs#readme]] for more supported runtimes
+          gem 'therubyracer', platforms: :ruby
+       	#+END_SRC
+   4. [0/3] generate a scaffold
+      1. [ ] rails generate scaffold
+	 #+BEGIN_SRC sh
+           rails generate scaffold reading weight:decimal reading_time:datetime --skip-stylesheets
+         #+END_SRC
+      2. [ ] migrate the database
+	 #+BEGIN_SRC sh
+	   rake db:migrate
+	 #+END_SRC
+      3. [ ] set default route in file:../config/routes.rb
+	 #+BEGIN_SRC ruby
+           root 'readings#index'
+	 #+END_SRC
+   5. [ ] Add twitter-bootstrap-rails to [[file:../Gemfile][Gemfile]]
+      #+BEGIN_SRC conf
+        gem 'less-rails'
+       	gem 'twitter-bootstrap-rails
+      #+END_SRC
+   6. [ ] run the bootstrap install generator
+      #+BEGIN_SRC sh
+       	rails generate bootstrap:install less
+      #+END_SRC
+   7. [ ] Generate a fixed layout
+      #+BEGIN_SRC sh
+        rails generate bootstrap:layout fixed
+      #+END_SRC
+   8. [ ] restart server
+*** [0/5] Improve the layout
+   1. [ ] Wrap the content in a fixed width layout in [[file:../app/views/layouts/application.html.erb][application.html.erb]]
+      #+BEGIN_SRC html
+       	<body>
+          <div class="container">
+            <%= yield %>
+          </div>
+       	</body>
+      #+END_SRC
+   2. [ ] Add a sidebar with a row div in [[file:../app/views/layouts/application.html.erb][application.html.erb]]
+      #+BEGIN_SRC html
+       	<body>
+          <div class="container">
+            <div class="row">
+              <div class="span9"><%= yield %></div>
+              <div class="span3">
+              <h2>About Us</h2>
+              </div>
+            </div>
+          </div>
+       	</body>
+      #+END_SRC
+   3. [ ] Add a navigation bar in [[file:../app/views/layouts/application.html.erb][application.html.erb]]
+      - place directly after body tab
+      #+BEGIN_SRC html
+       	<div class="navbar navbar-fixed-top">
+          <div class="navbar-inner">
+            <div class="container">
+              <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+               	<span class="icon-bar"></span>
+               	<span class="icon-bar"></span>
+               	<span class="icon-bar"></span>
+              </a>
+              <a class="brand" href="#">Some Store</a>
+              <div class="nav-collapse">
+               	<ul class="nav">
+                  <li><%= link_to "List Weights", readings_path %></li>
+                  <li><%= link_to "Goals", readings_path %></li>
+                  <li><%= link_to "3 day graph", readings_path %></li>
+                  <li><%= link_to "7 day graph", readings_path %></li>
+               	</ul>
+              </div>
+            </div>
+          </div>
+       	</div>
+      #+END_SRC
+   4. [ ] Add 60 pixels in [[file:../app/assets/stylesheets/bootstrap_and_overrides.css.less][bootstrap_and_overrides.css.less]]
+      #+BEGIN_SRC css
+       	@import "twitter/bootstrap/bootstrap";
+       	body { padding-top: 60px; }
+       	@import "twitter/bootstrap/responsive";
+      #+END_SRC
+   5. [ ] scaffold views
+      #+BEGIN_SRC sh
+       	rails generate bootstrap:themed reading 
+      #+END_SRC
+** Install gems
+   - twitter-bootstrap-rails
+   - less-rails
+** TODO [0/7] Daniel Kehoe / bootstrap-sass (http://railsapps.github.io/twitter-bootstrap-rails.html )
+  1. [0/6] Generate a skeletal Rails application bootstap-kehoe.troywill.info
+     1. [ ] rails new command
       #+BEGIN_SRC sh
         rails new kehoe
       #+END_SRC
-     2. [X] Link repository
+     2. [ ] copy repository
       #+BEGIN_SRC sh
-        cd kehoe && ln -s ~/rcs/github/emacs-org-mode-rails-bootstrap/
+        cd kehoe && mv -v ~/rcs/github/twitter-bootstrap-emacs-org-mode .
       #+END_SRC
-     3. [X] Nameserver https://manage.www.namecheap.com
+     3. [ ] Nameserver https://manage.www.namecheap.com
       #+BEGIN_SRC example
       kehoe.troywill.info
       #+END_SRC
-     4. [X] Virtual Host file:/etc/httpd/conf/httpd.conf
+     4. [ ] Virtual Host file:/etc/httpd/conf/httpd.conf
       #+BEGIN_SRC conf
         <VirtualHost *:80>
             ServerAdmin webmaster@dummy-host.example.com
@@ -26,41 +255,43 @@
             RailsEnv development
         </VirtualHost>
       #+END_SRC
-     5. [X] Enable a JavaScript runtime in [[file:../Gemfile][Gemfile]]
+     5. [ ] Enable a JavaScript runtime in [[file:../Gemfile][Gemfile]]
 	#+BEGIN_SRC conf
           # See https://github.com/sstephenson/execjs#readme for more supported runtimes
           gem 'therubyracer', platforms: :ruby
         #+END_SRC
-     6. [X] Restart Apache server (CentOS)
+     6. [ ] Restart Apache server (CentOS)
 	#+BEGIN_SRC sh
           httpd -k restart
         #+END_SRC
-  2. [X] generate a scaffold
-     1. [X] rails generate scaffold
+  2. [0/3] generate a scaffold
+     1. [ ] rails generate scaffold
 	#+BEGIN_SRC sh
           rails generate scaffold reading weight:decimal reading_time:datetime --skip-stylesheets
         #+END_SRC
-     2. [X] migrate the database
+     2. [ ] migrate the database
 	#+BEGIN_SRC sh
 	  rake db:migrate
 	#+END_SRC
-     3. [X] set default route in file:../config/routes.rb
+     3. [ ] set default route in file:../config/routes.rb
 	#+BEGIN_SRC ruby
           root 'readings#index'
 	#+END_SRC
-  3. [X] Enable the bootstrap-sass gem
-     1. [X] Install bootstrap-sass
+  3. [0/3] Enable the bootstrap-sass gem
+     1. [ ] Install bootstrap-sass
 	#+BEGIN_SRC sh
 	  sudo gem install bootstrap-sass
 	#+END_SRC
 	- ( Successfully installed bootstrap-sass-2.3.1.0 Wed May  8 08:55:02 PDT 2013 )
-     2. [X] Add bootstap-sass in [[file:../Gemfile][Gemfile]]
+     2. [ ] Add bootstap-sass in [[file:../Gemfile][Gemfile]]
 	#+BEGIN_SRC ruby
           gem 'bootstrap-sass'
+          # gem 'bootstrap-sass', '~> 2.3.1.0'
+          # gem list | grep sass
         #+END_SRC
-     3. [X] Restart server
-  4. [X] Include the Twitter Bootstrap Javascript
-     - [X] Modify [[file:../app/assets/javascripts/application.js][app/assets/javascripts/application.js]]
+     3. [ ] Restart server
+  4. [ ] Include the Twitter Bootstrap Javascript
+     - [ ] Modify [[file:../app/assets/javascripts/application.js][app/assets/javascripts/application.js]]
 	#+BEGIN_SRC js
           //= require jquery
           //= require jquery_ujs
@@ -68,19 +299,33 @@
           //= require_tree .
           //= require bootstrap
 	#+END_SRC
-  5. [X] Rename application.css application.scss
+  5. [ ] Rename application.css application.scss
      #+BEGIN_SRC sh
-     cd .. && mv -v application.css application.css.scss
+       cd ../app/assets/stylesheets && mv -v application.css application.css.scss && cd -
      #+END_SRC
-  6. [X] Import Bootstrap in an SCSS file
-     1. [X] Add a new [[file:../app/assets/stylesheets/bootstrap_and_overrides.css.scss][app/assets/stylesheets/bootstrap_and_overrides.css.scss]]
+  6. [ ] Import Bootstrap in an SCSS file
+     1. [ ] Add a new [[file:../app/assets/stylesheets/bootstrap_and_overrides.css.scss][app/assets/stylesheets/bootstrap_and_overrides.css.scss]]
 	#+BEGIN_SRC css
           @import "bootstrap";
           body { padding-top: 60px; }
           @import "bootstrap-responsive";
 	#+END_SRC
 	- bootstrap_and_overrides.css.scss is automatically included and compiled by the `*= require_tree .` statement in application.css.scss
-  7. [X] Create a Navigation partial in [[file:/scpc:troy@usahealthscience.com:/home/troy/srv/bootstrap/128/kehoe/app/views/layouts/_navigation.html.erb][app/views/layouts/_navigation.html.erb]]
+  7. [ ] Add this to file:../app/assets/stylesheets/application.css.scss for a gray background:
+     #+BEGIN_SRC css
+       .content {
+           background-color: #eee;
+           padding: 20px;
+           margin: 0 -20px; /* negative indent the amount of the padding to maintain the grid system */
+           -webkit-border-radius: 0 0 6px 6px;
+           -moz-border-radius: 0 0 6px 6px;
+           border-radius: 0 0 6px 6px;
+           -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.15);
+           -moz-box-shadow: 0 1px 2px rgba(0,0,0,.15);
+           box-shadow: 0 1px 2px rgba(0,0,0,.15);
+       }
+     #+END_SRC
+  8. [ ] Create a Navigation partial in [[file:/scpc:troy@usahealthscience.com:/home/troy/srv/bootstrap/128/kehoe/app/views/layouts/_navigation.html.erb][app/views/layouts/_navigation.html.erb]]
      #+BEGIN_SRC html
 <%= link_to "Home", root_path, :class => 'brand' %>
 <ul class="nav">
@@ -112,7 +357,7 @@
   <li><%= link_to "4 year graph", root_path %></li>
 </ul>
      #+END_SRC
-  8. [ ] Create a Messages partial in file:../app/views/layouts/_messages.html.erb
+  9. [ ] Create a Messages partial in file:../app/views/layouts/_messages.html.erb
      #+BEGIN_SRC html
        <% flash.each do |name, msg| %>
          <% if msg.is_a?(String) %>
@@ -123,221 +368,46 @@
          <% end %>
        <% end %>
      #+END_SRC
-  9. [X] New Application Layout with Twitter Bootstrap file:../app/views/layouts/application.html.erb
-     #+BEGIN_SRC html
-       <!doctype html>
-       <html>
-         <head>
-           <meta charset="utf-8">
-           <meta name="viewport" content="width=device-width, initial-scale=1.0">
-           <title><%= content_for?(:title) ? yield(:title) : "Myapp" %></title>
-           <meta name="description" content="">
-           <meta name="author" content="">
-           <%= stylesheet_link_tag "application", :media => "all" %>
-           <%= javascript_include_tag "application" %>
-           <%= csrf_meta_tags %>
-           <%= yield(:head) %>
-         </head>
-         <body>
-           <header class="navbar navbar-fixed-top">
-             <nav class="navbar-inner">
-               <div class="container">
-                 <%= render 'layouts/navigation' %>
-               </div>
-             </nav>
-           </header>
-           <div id="main" role="main">
-             <div class="container">
-               <div class="content">
-                 <div class="row">
-                   <div class="span12">
-                     <%= render 'layouts/messages' %>
-                     <%= yield %>
-                   </div>
-                 </div>
-                 <footer>
-                 </footer>
-               </div>
-             </div> <!--! end of .container -->
-           </div> <!--! end of #main -->
-         </body>
-       </html>
-     #+END_SRC
-* TODO [3/6] Generate a skeletal Rails application with bootstrap-sass gem
-  1. [X] Install gems
-     #+BEGIN_SRC sh
-       sudo gem install bootstrap-sass
-     #+END_SRC
-  2. [X] Run the rails new command
-     #+BEGIN_SRC sh
-       rails new bootstrap-sass
-     #+END_SRC
-  3. [X] Enable a JavaScript runtime in [[file:../Gemfile][Gemfile]]
-       #+BEGIN_SRC conf
-         # See https://github.com/sstephenson/execjs#readme for more supported runtimes
-         gem 'therubyracer', platforms: :ruby
-       #+END_SRC
-  4. [3/3] generate a scaffold
-     1. [X] rails generate scaffold
-	#+BEGIN_SRC sh
-          rails generate scaffold reading weight:decimal reading_time:datetime --skip-stylesheets
-        #+END_SRC
-     2. [X] migrate the database
-	#+BEGIN_SRC sh
-	  rake db:migrate
-	#+END_SRC
-     3. [X] set default route in file:../config/routes.rb
-	#+BEGIN_SRC ruby
-          root 'readings#index'
-	#+END_SRC
-  5. [ ] Add twitter-bootstrap-rails to [[file:../Gemfile][Gemfile]]
-     #+BEGIN_SRC conf
-       gem ''
-     #+END_SRC
-  6. [ ] run the bootstrap install generator
-     #+BEGIN_SRC sh
-       rails generate bootstrap:install
-     #+END_SRC
-  7. [ ] restart server
-** [0/5] Improve the layout
-  1. [ ] Wrap the content in a fixed width layout in [[file:../app/views/layouts/application.html.erb][application.html.erb]]
-     #+BEGIN_SRC html
-       <body>
-         <div class="container">
-           <%= yield %>
-         </div>
-       </body>
-     #+END_SRC
-  2. [ ] Add a sidebar with a row div in [[file:../app/views/layouts/application.html.erb][application.html.erb]]
-     #+BEGIN_SRC html
-       <body>
-         <div class="container">
-           <div class="row">
-             <div class="span9"><%= yield %></div>
-             <div class="span3">
-             <h2>About Us</h2>
-             </div>
-           </div>
-         </div>
-       </body>
-     #+END_SRC
-  3. [ ] Add a navigation bar in [[file:../app/views/layouts/application.html.erb][application.html.erb]]
-     - place directly after body tab
-     #+BEGIN_SRC html
-       <div class="navbar navbar-fixed-top">
-         <div class="navbar-inner">
-           <div class="container">
-             <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-               <span class="icon-bar"></span>
-               <span class="icon-bar"></span>
-               <span class="icon-bar"></span>
-             </a>
-             <a class="brand" href="#">Some Store</a>
-             <div class="nav-collapse">
-               <ul class="nav">
-                 <li><%= link_to "List Weights", readings_path %></li>
-                 <li><%= link_to "Goals", readings_path %></li>
-                 <li><%= link_to "3 day graph", readings_path %></li>
-                 <li><%= link_to "7 day graph", readings_path %></li>
-               </ul>
-             </div>
-           </div>
-         </div>
-       </div>
-     #+END_SRC
-  4. [ ] Add 60 pixels in [[file:../app/assets/stylesheets/bootstrap_and_overrides.css.less][bootstrap_and_overrides.css.less]]
-     #+BEGIN_SRC css
-       @import "twitter/bootstrap/bootstrap";
-       body { padding-top: 60px; }
-       @import "twitter/bootstrap/responsive";
-     #+END_SRC
-  5. [ ] scaffold views
-     #+BEGIN_SRC sh
-       rails generate bootstrap:themed reading 
-     #+END_SRC
-* TODO [0/7] Generate a skeletal Rails application with twitter-bootstrap-rails gem
-  1. [ ] Run the rails new command
-     #+BEGIN_SRC sh
-       rails new bootstrap
-     #+END_SRC
-  2. [ ] Enable a JavaScript runtime in [[file:../Gemfile][Gemfile]]
-       #+BEGIN_SRC conf
-         # See https://github.com/sstephenson/execjs#readme for more supported runtimes
-         gem 'therubyracer', platforms: :ruby
-       #+END_SRC
-  3. [ ] Add twitter-bootstrap-rails to [[file:../Gemfile][Gemfile]]
-     #+BEGIN_SRC conf
-       gem 'twitter-bootstrap-rails'
-       gem 'less-rails'
-     #+END_SRC
-  4. [ ] generate a scaffold
-     #+BEGIN_SRC sh
-       rails generate scaffold reading weight:decimal reading_time:datetime --skip-stylesheets
-     #+END_SRC
-  5. [ ] migrate the database
-  6. [ ] default route
-  7. [ ] run the bootstrap install generator
-     #+BEGIN_SRC sh
-       rails generate bootstrap:install
-     #+END_SRC
-  8. [ ] restart server
-
-** [0/5] Improve the layout
-  1. [ ] Wrap the content in a fixed width layout in [[file:../app/views/layouts/application.html.erb][application.html.erb]]
-     #+BEGIN_SRC html
-       <body>
-         <div class="container">
-           <%= yield %>
-         </div>
-       </body>
-     #+END_SRC
-  2. [ ] Add a sidebar with a row div in [[file:../app/views/layouts/application.html.erb][application.html.erb]]
-     #+BEGIN_SRC html
-       <body>
-         <div class="container">
-           <div class="row">
-             <div class="span9"><%= yield %></div>
-             <div class="span3">
-             <h2>About Us</h2>
-             </div>
-           </div>
-         </div>
-       </body>
-     #+END_SRC
-  3. [ ] Add a navigation bar in [[file:../app/views/layouts/application.html.erb][application.html.erb]]
-     - place directly after body tab
-     #+BEGIN_SRC html
-       <div class="navbar navbar-fixed-top">
-         <div class="navbar-inner">
-           <div class="container">
-             <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-               <span class="icon-bar"></span>
-               <span class="icon-bar"></span>
-               <span class="icon-bar"></span>
-             </a>
-             <a class="brand" href="#">Some Store</a>
-             <div class="nav-collapse">
-               <ul class="nav">
-                 <li><%= link_to "List Weights", readings_path %></li>
-                 <li><%= link_to "Goals", readings_path %></li>
-                 <li><%= link_to "3 day graph", readings_path %></li>
-                 <li><%= link_to "7 day graph", readings_path %></li>
-               </ul>
-             </div>
-           </div>
-         </div>
-       </div>
-     #+END_SRC
-  4. [ ] Add 60 pixels in [[file:../app/assets/stylesheets/bootstrap_and_overrides.css.less][bootstrap_and_overrides.css.less]]
-     #+BEGIN_SRC css
-       @import "twitter/bootstrap/bootstrap";
-       body { padding-top: 60px; }
-       @import "twitter/bootstrap/responsive";
-     #+END_SRC
-  5. [ ] scaffold views
-     #+BEGIN_SRC sh
-       rails generate bootstrap:themed reading 
-     #+END_SRC
+  10. [ ] New Application Layout with Twitter Bootstrap file:../app/views/layouts/application.html.erb
+      #+BEGIN_SRC html
+	<!doctype html>
+	<html>
+          <head>
+            <meta charset="utf-8">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <title><%= content_for?(:title) ? yield(:title) : "Myapp" %></title>
+            <meta name="description" content="">
+            <meta name="author" content="">
+            <%= stylesheet_link_tag "application", :media => "all" %>
+            <%= javascript_include_tag "application" %>
+            <%= csrf_meta_tags %>
+            <%= yield(:head) %>
+          </head>
+          <body>
+            <header class="navbar navbar-fixed-top">
+              <nav class="navbar-inner">
+		<div class="container">
+                  <%= render 'layouts/navigation' %>
+		</div>
+              </nav>
+            </header>
+            <div id="main" role="main">
+              <div class="container">
+		<div class="content">
+                  <div class="row">
+                    <div class="span12">
+                      <%= render 'layouts/messages' %>
+                      <%= yield %>
+                    </div>
+                  </div>
+                  <footer>
+                  </footer>
+		</div>
+              </div> <!--! end of .container -->
+            </div> <!--! end of #main -->
+          </body>
+	</html>
+      #+END_SRC
 * TODO Decide which Twitter Bootstrap Gem to use
   | Gem                     | Author                  | Comments |   |
   |-------------------------+-------------------------+----------+---|
@@ -345,20 +415,41 @@
   | sass-twitter-bootstrap  | John W. Long and others |          |   |
   | less-rails-bootstrap    | Ken Collins             |          |   |
   | twitter-bootstrap-rails | Seyhun Akyürek          |          |   |
-* Resources
-** Twitter Bootstrap
-   - http://twitter.github.com/bootstrap/
-   - [[http://en.wikipedia.org/wiki/Twitter_Bootstrap][Twitter Bootstrap]] from Wikipedia
-** Videos
-   - http://railscasts.com/episodes/328-twitter-bootstrap-basics
-** Gems
-*** bootstrap-sass
-    - GitHub thomas-mcdonald [[https://github.com/thomas-mcdonald/bootstrap-sass][bootstrap-sass]]
-*** twitter-bootstrap-rails
-   - https://github.com/seyhunak/twitter-bootstrap-rails
-     
-** Tutorials
-   - http://railsapps.github.io/twitter-bootstrap-rails.html
      
 * Problems and Solutions
 ** Messed up datetime fields
+* REFERENCE
+** Generated by rails on Saturday, May 11, 2013
+*** application.html.erb file:../app/views/layouts/application.html.erb
+    #+BEGIN_SRC html
+      <!DOCTYPE html>
+      <html>
+      <head>
+        <title>Bootstrap</title>
+        <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
+        <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
+        <%= csrf_meta_tags %>
+      </head>
+      <body>
+      
+      <%= yield %>
+      
+      </body>
+      </html>
+    #+END_SRC
+*** file:../app/assets/stylesheets/application.css
+    #+BEGIN_SRC css
+      /*
+       ,* This is a manifest file that'll be compiled into application.css, which will include all the files
+       ,* listed below.
+       ,*
+       ,* Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
+       ,* or vendor/assets/stylesheets of plugins, if any, can be referenced here using a relative path.
+       ,*
+       ,* You're free to add application-wide styles to this file and they'll appear at the top of the
+       ,* compiled file, but it's generally better to create a new file per style scope.
+       ,*
+       ,*= require_self
+       ,*= require_tree .
+       */
+    #+END_SRC
