--- a/twitter-bootstrap-step-by-step.org
+++ b/twitter-bootstrap-step-by-step.org
@@ -12,15 +12,117 @@
    - https://github.com/seyhunak/twitter-bootstrap-rails
 ** Tutorials
    - http://railsapps.github.io/twitter-bootstrap-rails.html
-* [0/4] Twitter Bootstrap with Ruby on Rails from Zipfile
-  1. [ ] cd ../tmp && wget http://twitter.github.io/bootstrap/assets/bootstrap.zip
-  2. [ ] copy javascripts, css, and images
-  3. [ ] backup application.html.erb
-  4. [ ] cp Twitter's Example
-     #+BEGIN_SRC html
-       http://twitter.github.io/bootstrap/examples/starter-template.html
+* [0/7] Twitter Bootstrap with Ruby on Rails from Zipfile
+  1. [ ] wget http://twitter.github.io/bootstrap/assets/bootstrap.zip
+  2. [ ] Unzip
+     #+BEGIN_SRC sh
+       unzip bootstap.zip
      #+END_SRC
-     
+  3. [ ] copy 4 bootstrap css files to app/assets/stylesheets
+     #+BEGIN_SRC sh :tangle bin/copy-bootstap-to-rails
+       # bootstrap.css bootstrap.min.css bootstrap-responsive.css bootstrap-responsive.min.css
+       cp -v bootstrap/css/bootstrap* ../app/assets/stylesheets
+     #+END_SRC
+  4. [ ] copy bootstrap javascripts to app/assets/javascripts
+     #+BEGIN_SRC sh :tangle bin/copy-bootstap-to-rails
+       cp -iv bootstrap/js/bootstrap.* ../app/assets/javascripts
+     #+END_SRC
+  5. [ ] images
+     #+BEGIN_SRC sh :tangle bin/copy-bootstap-to-rails
+       # ‘bootstrap/img/glyphicons-halflings.png’
+       # ‘bootstrap/img/glyphicons-halflings-white.png’
+       
+       mkdir -v ../app/assets/images
+       cp -iv bootstrap/img/* ../app/assets/images/
+     #+END_SRC
+  6. [ ] backup application.html.erb
+     #+BEGIN_SRC sh
+       cp application.html.erb application.html.erb.rails
+     #+END_SRC
+  7. [ ] cp Twitter's Example  [[http://twitter.github.io/bootstrap/examples/starter-template.html][starter-template.html]] ( wget http://twitter.github.io/bootstrap/examples/starter-template.html ) 
+     #+BEGIN_SRC html
+       # http://twitter.github.io/bootstrap/examples/starter-template.html Sunday, May 12, 2103
+       <!DOCTYPE html>
+       <html lang="en">
+         <head>
+           <meta charset="utf-8">
+           <title>Bootstrap, from Twitter</title>
+           <meta name="viewport" content="width=device-width, initial-scale=1.0">
+           <meta name="description" content="">
+           <meta name="author" content="">
+       
+           <!-- Le styles -->
+           <link href="../assets/css/bootstrap.css" rel="stylesheet">
+           <style>
+             body {
+               padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
+             }
+           </style>
+           <link href="../assets/css/bootstrap-responsive.css" rel="stylesheet">
+       
+           <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
+           <!--[if lt IE 9]>
+             <script src="../assets/js/html5shiv.js"></script>
+           <![endif]-->
+       
+           <!-- Fav and touch icons -->
+           <link rel="apple-touch-icon-precomposed" sizes="144x144" href="../assets/ico/apple-touch-icon-144-precomposed.png">
+           <link rel="apple-touch-icon-precomposed" sizes="114x114" href="../assets/ico/apple-touch-icon-114-precomposed.png">
+             <link rel="apple-touch-icon-precomposed" sizes="72x72" href="../assets/ico/apple-touch-icon-72-precomposed.png">
+                           <link rel="apple-touch-icon-precomposed" href="../assets/ico/apple-touch-icon-57-precomposed.png">
+                                          <link rel="shortcut icon" href="../assets/ico/favicon.png">
+         </head>
+       
+         <body>
+       
+           <div class="navbar navbar-inverse navbar-fixed-top">
+             <div class="navbar-inner">
+               <div class="container">
+                 <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+                   <span class="icon-bar"></span>
+                   <span class="icon-bar"></span>
+                   <span class="icon-bar"></span>
+                 </button>
+                 <a class="brand" href="#">Project name</a>
+                 <div class="nav-collapse collapse">
+                   <ul class="nav">
+                     <li class="active"><a href="#">Home</a></li>
+                     <li><a href="#about">About</a></li>
+                     <li><a href="#contact">Contact</a></li>
+                   </ul>
+                 </div><!--/.nav-collapse -->
+               </div>
+             </div>
+           </div>
+       
+           <div class="container">
+       
+             <h1>Bootstrap starter template</h1>
+             <p>Use this document as a way to quick start any new project.<br> All you get is this message and a barebones HTML document.</p>
+       
+           </div> <!-- /container -->
+       
+           <!-- Le javascript
+           ================================================== -->
+           <!-- Placed at the end of the document so the pages load faster -->
+           <script src="../assets/js/jquery.js"></script>
+           <script src="../assets/js/bootstrap-transition.js"></script>
+           <script src="../assets/js/bootstrap-alert.js"></script>
+           <script src="../assets/js/bootstrap-modal.js"></script>
+           <script src="../assets/js/bootstrap-dropdown.js"></script>
+           <script src="../assets/js/bootstrap-scrollspy.js"></script>
+           <script src="../assets/js/bootstrap-tab.js"></script>
+           <script src="../assets/js/bootstrap-tooltip.js"></script>
+           <script src="../assets/js/bootstrap-popover.js"></script>
+           <script src="../assets/js/bootstrap-button.js"></script>
+           <script src="../assets/js/bootstrap-collapse.js"></script>
+           <script src="../assets/js/bootstrap-carousel.js"></script>
+           <script src="../assets/js/bootstrap-typeahead.js"></script>
+       
+         </body>
+       </html>
+     #+END_SRC
+  8. [ ] add stylesheet and javascript to application template header file:../app/views/layouts/
 * Twitter Bootstrap with Ruby on Rails  https://github.com/seyhunak/twitter-bootstrap-rails
 ** [0/11] Generate a skeletal Rails application with twitter-bootstrap-rails gem
    1. [ ] Run the rails new command
