new file:   html/twitter-bootstrap-step-by-step.html

--- a/twitter-bootstrap-step-by-step.org
+++ b/twitter-bootstrap-step-by-step.org
@@ -1,557 +1,9 @@
-* Resources
-** Twitter Bootstrap
-   - http://twitter.github.com/bootstrap/
-   - [[http://en.wikipedia.org/wiki/Twitter_Bootstrap][Twitter Bootstrap]] from Wikipedia
-   - Zipfile => http://twitter.github.io/bootstrap/assets/bootstrap.zip
-** Videos
-   - http://railscasts.com/episodes/328-twitter-bootstrap-basics
-** Gems
-*** bootstrap-sass
-    - GitHub thomas-mcdonald [[https://github.com/thomas-mcdonald/bootstrap-sass][bootstrap-sass]]
-*** twitter-bootstrap-rails
-   - https://github.com/seyhunak/twitter-bootstrap-rails
-** Tutorials
-   - http://railsapps.github.io/twitter-bootstrap-rails.html
-* [0/7] Twitter Bootstrap with Ruby on Rails from Zipfile
-  1. [ ] wget http://twitter.github.io/bootstrap/assets/bootstrap.zip
-  2. [ ] Unzip
-     #+BEGIN_SRC sh
-       unzip bootstap.zip
-     #+END_SRC
-  3. [ ] copy 4 bootstrap css files to app/assets/stylesheets
-     #+BEGIN_SRC sh :tangle bin/copy-bootstap-to-rails
-       # bootstrap.css bootstrap.min.css bootstrap-responsive.css bootstrap-responsive.min.css
-       cp -v bootstrap/css/bootstrap* ../app/assets/stylesheets
-     #+END_SRC
-  4. [ ] copy bootstrap javascripts to app/assets/javascripts
-     #+BEGIN_SRC sh :tangle bin/copy-bootstap-to-rails
-       cp -iv bootstrap/js/bootstrap.* ../app/assets/javascripts
-     #+END_SRC
-  5. [ ] images
-     #+BEGIN_SRC sh :tangle bin/copy-bootstap-to-rails
-       # ‘bootstrap/img/glyphicons-halflings.png’
-       # ‘bootstrap/img/glyphicons-halflings-white.png’
-       
-       mkdir -v ../app/assets/images
-       cp -iv bootstrap/img/* ../app/assets/images/
-     #+END_SRC
-  6. [ ] backup application.html.erb
-     #+BEGIN_SRC sh
-       cp application.html.erb application.html.erb.rails
-     #+END_SRC
-  7. [ ] cp Twitter's Example  [[http://twitter.github.io/bootstrap/examples/starter-template.html][starter-template.html]] ( wget http://twitter.github.io/bootstrap/examples/starter-template.html ) 
-     #+BEGIN_SRC html
-       # http://twitter.github.io/bootstrap/examples/starter-template.html Sunday, May 12, 2103
-       <!DOCTYPE html>
-       <html lang="en">
-         <head>
-           <meta charset="utf-8">
-           <title>Bootstrap, from Twitter</title>
-           <meta name="viewport" content="width=device-width, initial-scale=1.0">
-           <meta name="description" content="">
-           <meta name="author" content="">
-       
-           <!-- Le styles -->
-           <link href="../assets/css/bootstrap.css" rel="stylesheet">
-           <style>
-             body {
-               padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
-             }
-           </style>
-           <link href="../assets/css/bootstrap-responsive.css" rel="stylesheet">
-       
-           <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
-           <!--[if lt IE 9]>
-             <script src="../assets/js/html5shiv.js"></script>
-           <![endif]-->
-       
-           <!-- Fav and touch icons -->
-           <link rel="apple-touch-icon-precomposed" sizes="144x144" href="../assets/ico/apple-touch-icon-144-precomposed.png">
-           <link rel="apple-touch-icon-precomposed" sizes="114x114" href="../assets/ico/apple-touch-icon-114-precomposed.png">
-             <link rel="apple-touch-icon-precomposed" sizes="72x72" href="../assets/ico/apple-touch-icon-72-precomposed.png">
-                           <link rel="apple-touch-icon-precomposed" href="../assets/ico/apple-touch-icon-57-precomposed.png">
-                                          <link rel="shortcut icon" href="../assets/ico/favicon.png">
-         </head>
-       
-         <body>
-       
-           <div class="navbar navbar-inverse navbar-fixed-top">
-             <div class="navbar-inner">
-               <div class="container">
-                 <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-                   <span class="icon-bar"></span>
-                   <span class="icon-bar"></span>
-                   <span class="icon-bar"></span>
-                 </button>
-                 <a class="brand" href="#">Project name</a>
-                 <div class="nav-collapse collapse">
-                   <ul class="nav">
-                     <li class="active"><a href="#">Home</a></li>
-                     <li><a href="#about">About</a></li>
-                     <li><a href="#contact">Contact</a></li>
-                   </ul>
-                 </div><!--/.nav-collapse -->
-               </div>
-             </div>
-           </div>
-       
-           <div class="container">
-       
-             <h1>Bootstrap starter template</h1>
-             <p>Use this document as a way to quick start any new project.<br> All you get is this message and a barebones HTML document.</p>
-       
-           </div> <!-- /container -->
-       
-           <!-- Le javascript
-           ================================================== -->
-           <!-- Placed at the end of the document so the pages load faster -->
-           <script src="../assets/js/jquery.js"></script>
-           <script src="../assets/js/bootstrap-transition.js"></script>
-           <script src="../assets/js/bootstrap-alert.js"></script>
-           <script src="../assets/js/bootstrap-modal.js"></script>
-           <script src="../assets/js/bootstrap-dropdown.js"></script>
-           <script src="../assets/js/bootstrap-scrollspy.js"></script>
-           <script src="../assets/js/bootstrap-tab.js"></script>
-           <script src="../assets/js/bootstrap-tooltip.js"></script>
-           <script src="../assets/js/bootstrap-popover.js"></script>
-           <script src="../assets/js/bootstrap-button.js"></script>
-           <script src="../assets/js/bootstrap-collapse.js"></script>
-           <script src="../assets/js/bootstrap-carousel.js"></script>
-           <script src="../assets/js/bootstrap-typeahead.js"></script>
-       
-         </body>
-       </html>
-     #+END_SRC
-  8. [ ] add stylesheet and javascript to application template header file:../app/views/layouts/
-* Twitter Bootstrap with Ruby on Rails  https://github.com/seyhunak/twitter-bootstrap-rails
-** [0/11] Generate a skeletal Rails application with twitter-bootstrap-rails gem
-   1. [ ] Run the rails new command
-      #+BEGIN_SRC sh
-       	rails new bootstrap
-      #+END_SRC
-   2. [ ] Enable a JavaScript runtime in [[file:../Gemfile][Gemfile]]
-       	#+BEGIN_SRC conf
-          # See https://github.com/sstephenson/execjs#readme for more supported runtimes
-          gem 'therubyracer', platforms: :ruby
-       	#+END_SRC
-   3. [ ] Add twitter-bootstrap-rails to [[file:../Gemfile][Gemfile]]
-      #+BEGIN_SRC conf
-        # gem 'twitter-bootstrap-rails', :git => 'git://github.com/seyhunak/twitter-bootstrap-rails.git'
-       	gem 'twitter-bootstrap-rails'
-       	gem 'less-rails'
-      #+END_SRC
-   4. [ ] Run `bundle install`
-      #+BEGIN_SRC sh
-        bundle install
-      #+END_SRC
-   5. [ ] Then run the bootstrap generator to add Bootstrap includes into your assets:
-      #+BEGIN_SRC sh
-        rails generate bootstrap:install less
-      #+END_SRC
-      #+BEGIN_EXAMPLE
-              insert  app/assets/javascripts/application.js
-              create  app/assets/javascripts/bootstrap.js.coffee
-              create  app/assets/stylesheets/bootstrap_and_overrides.css.less
-              create  config/locales/en.bootstrap.yml
-                gsub  app/assets/stylesheets/application.css
-                gsub  app/assets/stylesheets/application.css
-      #+END_EXAMPLE
-   6. [ ] generate a scaffold
-      #+BEGIN_SRC sh :tangle bin/generate-scaffold-reading.sh :shebang #!/bin/bash
-        rails generate scaffold reading \
-            weight:decimal \
-            reading_time:datetime \
-            note:text \
-            --skip-stylesheets
-      #+END_SRC
-   7. [ ] migrate the database
-   8. [ ] default route file:../config/routes.rb
-      #+BEGIN_SRC ruby
-          root 'readings#index'
-      #+END_SRC
-   9. [ ] Generate a Fixed Layout
-      #+BEGIN_SRC sh
-        rails generate bootstrap:layout application fixed
-      #+END_SRC
-   10. [ ] file:../app/assets/
-   11. [ ] restart server
+* Introduction
+  This is a step by step tutorial for new Rails learners to learn how
+  Twitter and Bootstrap works and to how to use Twitter Bootstrap to provide
+  your application with modern layout and styling.
 
-*** [0/5] Improve the layout
-   1. [ ] Wrap the content in a fixed width layout in [[file:../app/views/layouts/application.html.erb][application.html.erb]]
-      #+BEGIN_SRC html
-       	<body>
-          <div class="container">
-            <%= yield %>
-          </div>
-       	</body>
-      #+END_SRC
-   2. [ ] Add a sidebar with a row div in [[file:../app/views/layouts/application.html.erb][application.html.erb]]
-      #+BEGIN_SRC html
-       	<body>
-          <div class="container">
-            <div class="row">
-              <div class="span9"><%= yield %></div>
-              <div class="span3">
-              <h2>About Us</h2>
-              </div>
-            </div>
-          </div>
-       	</body>
-      #+END_SRC
-   3. [ ] Add a navigation bar in [[file:../app/views/layouts/application.html.erb][application.html.erb]]
-      - place directly after body tab
-      #+BEGIN_SRC html
-       	<div class="navbar navbar-fixed-top">
-          <div class="navbar-inner">
-            <div class="container">
-              <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-               	<span class="icon-bar"></span>
-               	<span class="icon-bar"></span>
-               	<span class="icon-bar"></span>
-              </a>
-              <a class="brand" href="#">Some Store</a>
-              <div class="nav-collapse">
-               	<ul class="nav">
-                  <li><%= link_to "List Weights", readings_path %></li>
-                  <li><%= link_to "Goals", readings_path %></li>
-                  <li><%= link_to "3 day graph", readings_path %></li>
-                  <li><%= link_to "7 day graph", readings_path %></li>
-               	</ul>
-              </div>
-            </div>
-          </div>
-       	</div>
-      #+END_SRC
-   4. [ ] Add 60 pixels in [[file:../app/assets/stylesheets/bootstrap_and_overrides.css.less][bootstrap_and_overrides.css.less]]
-      #+BEGIN_SRC css
-       	@import "twitter/bootstrap/bootstrap";
-       	body { padding-top: 60px; }
-       	@import "twitter/bootstrap/responsive";
-      #+END_SRC
-   5. [ ] scaffold views
-      #+BEGIN_SRC sh
-       	rails generate bootstrap:themed reading 
-      #+END_SRC
-** TODO [0/7] Generate a skeletal Rails application with bootstrap-sass gem
-   1. [ ] Install gems
-      #+BEGIN_SRC sh
-       	sudo gem install bootstrap-sass
-      #+END_SRC
-   2. [ ] Run the rails new command
-      #+BEGIN_SRC sh
-       	rails new bootstrap-sass
-      #+END_SRC
-   3. [ ] Enable a JavaScript runtime in [[file:../Gemfile][Gemfile]]
-       	#+BEGIN_SRC conf
-          # See [[https://github.com/sstephenson/execjs#readme]] for more supported runtimes
-          gem 'therubyracer', platforms: :ruby
-       	#+END_SRC
-   4. [0/3] generate a scaffold
-      1. [ ] rails generate scaffold
-	 #+BEGIN_SRC sh
-           rails generate scaffold reading weight:decimal reading_time:datetime --skip-stylesheets
-         #+END_SRC
-      2. [ ] migrate the database
-	 #+BEGIN_SRC sh
-	   rake db:migrate
-	 #+END_SRC
-      3. [ ] set default route in file:../config/routes.rb
-	 #+BEGIN_SRC ruby
-           root 'readings#index'
-	 #+END_SRC
-   5. [ ] Add twitter-bootstrap-rails to [[file:../Gemfile][Gemfile]]
-      #+BEGIN_SRC conf
-        gem 'less-rails'
-       	gem 'twitter-bootstrap-rails
-      #+END_SRC
-   6. [ ] run the bootstrap install generator
-      #+BEGIN_SRC sh
-       	rails generate bootstrap:install less
-      #+END_SRC
-   7. [ ] Generate a fixed layout
-      #+BEGIN_SRC sh
-        rails generate bootstrap:layout fixed
-      #+END_SRC
-   8. [ ] restart server
-*** [0/5] Improve the layout
-   1. [ ] Wrap the content in a fixed width layout in [[file:../app/views/layouts/application.html.erb][application.html.erb]]
-      #+BEGIN_SRC html
-       	<body>
-          <div class="container">
-            <%= yield %>
-          </div>
-       	</body>
-      #+END_SRC
-   2. [ ] Add a sidebar with a row div in [[file:../app/views/layouts/application.html.erb][application.html.erb]]
-      #+BEGIN_SRC html
-       	<body>
-          <div class="container">
-            <div class="row">
-              <div class="span9"><%= yield %></div>
-              <div class="span3">
-              <h2>About Us</h2>
-              </div>
-            </div>
-          </div>
-       	</body>
-      #+END_SRC
-   3. [ ] Add a navigation bar in [[file:../app/views/layouts/application.html.erb][application.html.erb]]
-      - place directly after body tab
-      #+BEGIN_SRC html
-       	<div class="navbar navbar-fixed-top">
-          <div class="navbar-inner">
-            <div class="container">
-              <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-               	<span class="icon-bar"></span>
-               	<span class="icon-bar"></span>
-               	<span class="icon-bar"></span>
-              </a>
-              <a class="brand" href="#">Some Store</a>
-              <div class="nav-collapse">
-               	<ul class="nav">
-                  <li><%= link_to "List Weights", readings_path %></li>
-                  <li><%= link_to "Goals", readings_path %></li>
-                  <li><%= link_to "3 day graph", readings_path %></li>
-                  <li><%= link_to "7 day graph", readings_path %></li>
-               	</ul>
-              </div>
-            </div>
-          </div>
-       	</div>
-      #+END_SRC
-   4. [ ] Add 60 pixels in [[file:../app/assets/stylesheets/bootstrap_and_overrides.css.less][bootstrap_and_overrides.css.less]]
-      #+BEGIN_SRC css
-       	@import "twitter/bootstrap/bootstrap";
-       	body { padding-top: 60px; }
-       	@import "twitter/bootstrap/responsive";
-      #+END_SRC
-   5. [ ] scaffold views
-      #+BEGIN_SRC sh
-       	rails generate bootstrap:themed reading 
-      #+END_SRC
-** Install gems
-   - twitter-bootstrap-rails
-   - less-rails
-** TODO [0/7] Daniel Kehoe / bootstrap-sass (http://railsapps.github.io/twitter-bootstrap-rails.html )
-  1. [0/6] Generate a skeletal Rails application bootstap-kehoe.troywill.info
-     1. [ ] rails new command
-      #+BEGIN_SRC sh
-        rails new kehoe
-      #+END_SRC
-     2. [ ] copy repository
-      #+BEGIN_SRC sh
-        cd kehoe && mv -v ~/rcs/github/twitter-bootstrap-emacs-org-mode .
-      #+END_SRC
-     3. [ ] Nameserver https://manage.www.namecheap.com
-      #+BEGIN_SRC example
-      kehoe.troywill.info
-      #+END_SRC
-     4. [ ] Virtual Host file:/etc/httpd/conf/httpd.conf
-      #+BEGIN_SRC conf
-        <VirtualHost *:80>
-            ServerAdmin webmaster@dummy-host.example.com
-            DocumentRoot "/home/troy/srv/bootstrap/128/kehoe/public"
-            ServerName bootstrap-kehoe.troywill.info
-            ErrorLog logs/dummy-host.example.com-error_log
-            CustomLog logs/dummy-host.example.com-access_log common
-            RailsEnv development
-        </VirtualHost>
-      #+END_SRC
-     5. [ ] Enable a JavaScript runtime in [[file:../Gemfile][Gemfile]]
-	#+BEGIN_SRC conf
-          # See https://github.com/sstephenson/execjs#readme for more supported runtimes
-          gem 'therubyracer', platforms: :ruby
-        #+END_SRC
-     6. [ ] Restart Apache server (CentOS)
-	#+BEGIN_SRC sh
-          httpd -k restart
-        #+END_SRC
-  2. [0/3] generate a scaffold
-     1. [ ] rails generate scaffold
-	#+BEGIN_SRC sh
-          rails generate scaffold reading weight:decimal reading_time:datetime --skip-stylesheets
-        #+END_SRC
-     2. [ ] migrate the database
-	#+BEGIN_SRC sh
-	  rake db:migrate
-	#+END_SRC
-     3. [ ] set default route in file:../config/routes.rb
-	#+BEGIN_SRC ruby
-          root 'readings#index'
-	#+END_SRC
-  3. [0/3] Enable the bootstrap-sass gem
-     1. [ ] Install bootstrap-sass
-	#+BEGIN_SRC sh
-	  sudo gem install bootstrap-sass
-	#+END_SRC
-	- ( Successfully installed bootstrap-sass-2.3.1.0 Wed May  8 08:55:02 PDT 2013 )
-     2. [ ] Add bootstap-sass in [[file:../Gemfile][Gemfile]]
-	#+BEGIN_SRC ruby
-          gem 'bootstrap-sass'
-          # gem 'bootstrap-sass', '~> 2.3.1.0'
-          # gem list | grep sass
-        #+END_SRC
-     3. [ ] Restart server
-  4. [ ] Include the Twitter Bootstrap Javascript
-     - [ ] Modify [[file:../app/assets/javascripts/application.js][app/assets/javascripts/application.js]]
-	#+BEGIN_SRC js
-          //= require jquery
-          //= require jquery_ujs
-          //= require turbolinks
-          //= require_tree .
-          //= require bootstrap
-	#+END_SRC
-  5. [ ] Rename application.css application.scss
-     #+BEGIN_SRC sh
-       cd ../app/assets/stylesheets && mv -v application.css application.css.scss && cd -
-     #+END_SRC
-  6. [ ] Import Bootstrap in an SCSS file
-     1. [ ] Add a new [[file:../app/assets/stylesheets/bootstrap_and_overrides.css.scss][app/assets/stylesheets/bootstrap_and_overrides.css.scss]]
-	#+BEGIN_SRC css
-          @import "bootstrap";
-          body { padding-top: 60px; }
-          @import "bootstrap-responsive";
-	#+END_SRC
-	- bootstrap_and_overrides.css.scss is automatically included and compiled by the `*= require_tree .` statement in application.css.scss
-  7. [ ] Add this to file:../app/assets/stylesheets/application.css.scss for a gray background:
-     #+BEGIN_SRC css
-       .content {
-           background-color: #eee;
-           padding: 20px;
-           margin: 0 -20px; /* negative indent the amount of the padding to maintain the grid system */
-           -webkit-border-radius: 0 0 6px 6px;
-           -moz-border-radius: 0 0 6px 6px;
-           border-radius: 0 0 6px 6px;
-           -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.15);
-           -moz-box-shadow: 0 1px 2px rgba(0,0,0,.15);
-           box-shadow: 0 1px 2px rgba(0,0,0,.15);
-       }
-     #+END_SRC
-  8. [ ] Create a Navigation partial in [[file:/scpc:troy@usahealthscience.com:/home/troy/srv/bootstrap/128/kehoe/app/views/layouts/_navigation.html.erb][app/views/layouts/_navigation.html.erb]]
-     #+BEGIN_SRC html
-<%= link_to "Home", root_path, :class => 'brand' %>
-<ul class="nav">
-  <% if user_signed_in? %>
-  <li>
-    <%= link_to('Logout', destroy_user_session_path, :method=>'delete') %>
-  </li>
-  <% else %>
-  <li>
-    <%= link_to('Login', new_user_session_path)  %>
-  </li>
-  <% end %>
-  <% if user_signed_in? %>
-  <li>
-    <%= link_to('Edit account', edit_user_registration_path) %>
-  </li>
-  <% else %>
-  <li>
-    <%= link_to('Sign up', new_user_registration_path)  %>
-  </li>
-  <% end %>
-  <li><%= link_to "Overview", root_path %></li>
-  <li><%= link_to "New reading", root_path %></li>
-  <li><%= link_to "See all readings", root_path %></li>
-  <li><%= link_to "Goal", root_path %></li>
-  <li><%= link_to "3 day graph", root_path %></li>
-  <li><%= link_to "28 day graph", root_path %></li>
-  <li><%= link_to "1 year graph", root_path %></li>
-  <li><%= link_to "4 year graph", root_path %></li>
-</ul>
-     #+END_SRC
-  9. [ ] Create a Messages partial in file:../app/views/layouts/_messages.html.erb
-     #+BEGIN_SRC html
-       <% flash.each do |name, msg| %>
-         <% if msg.is_a?(String) %>
-         <div class="alert alert-<%= name == :notice ? "success" : "error" %>">
-           <a class="close" data-dismiss="alert">&#215;</a>
-           <%= content_tag :div, msg, :id => "flash_#{name}" %>
-         </div>
-         <% end %>
-       <% end %>
-     #+END_SRC
-  10. [ ] New Application Layout with Twitter Bootstrap file:../app/views/layouts/application.html.erb
-      #+BEGIN_SRC html
-	<!doctype html>
-	<html>
-          <head>
-            <meta charset="utf-8">
-            <meta name="viewport" content="width=device-width, initial-scale=1.0">
-            <title><%= content_for?(:title) ? yield(:title) : "Myapp" %></title>
-            <meta name="description" content="">
-            <meta name="author" content="">
-            <%= stylesheet_link_tag "application", :media => "all" %>
-            <%= javascript_include_tag "application" %>
-            <%= csrf_meta_tags %>
-            <%= yield(:head) %>
-          </head>
-          <body>
-            <header class="navbar navbar-fixed-top">
-              <nav class="navbar-inner">
-		<div class="container">
-                  <%= render 'layouts/navigation' %>
-		</div>
-              </nav>
-            </header>
-            <div id="main" role="main">
-              <div class="container">
-		<div class="content">
-                  <div class="row">
-                    <div class="span12">
-                      <%= render 'layouts/messages' %>
-                      <%= yield %>
-                    </div>
-                  </div>
-                  <footer>
-                  </footer>
-		</div>
-              </div> <!--! end of .container -->
-            </div> <!--! end of #main -->
-          </body>
-	</html>
-      #+END_SRC
-* TODO Decide which Twitter Bootstrap Gem to use
-  | Gem                     | Author                  | Comments |   |
-  |-------------------------+-------------------------+----------+---|
-  | bootstrap-sass          | Thomas McDonald         |          |   |
-  | sass-twitter-bootstrap  | John W. Long and others |          |   |
-  | less-rails-bootstrap    | Ken Collins             |          |   |
-  | twitter-bootstrap-rails | Seyhun Akyürek          |          |   |
-     
-* Problems and Solutions
-** Messed up datetime fields
-* REFERENCE
-** Generated by rails on Saturday, May 11, 2013
-*** application.html.erb file:../app/views/layouts/application.html.erb
-    #+BEGIN_SRC html
-      <!DOCTYPE html>
-      <html>
-      <head>
-        <title>Bootstrap</title>
-        <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
-        <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
-        <%= csrf_meta_tags %>
-      </head>
-      <body>
-      
-      <%= yield %>
-      
-      </body>
-      </html>
-    #+END_SRC
-*** file:../app/assets/stylesheets/application.css
-    #+BEGIN_SRC css
-      /*
-       ,* This is a manifest file that'll be compiled into application.css, which will include all the files
-       ,* listed below.
-       ,*
-       ,* Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
-       ,* or vendor/assets/stylesheets of plugins, if any, can be referenced here using a relative path.
-       ,*
-       ,* You're free to add application-wide styles to this file and they'll appear at the top of the
-       ,* compiled file, but it's generally better to create a new file per style scope.
-       ,*
-       ,*= require_self
-       ,*= require_tree .
-       */
-    #+END_SRC
+  You can follow the steps below to create a working Rails application. This tutorial
+  was writing in Emacs Org Mode.
+  
+* TODO Build a Rails application with [[http://twitter.github.io/bootstrap/][Twitter Bootstrap]]
