--- a/twitter-bootstrap-step-by-step.org
+++ b/twitter-bootstrap-step-by-step.org
@@ -9,7 +9,11 @@
   you are an Emacs Org Mode user you can carry out the steps in this tutorial
   from the twitter-bootstrap-step-by-step.org file.
   
-* Part One: Build a Rails application with [[http://twitter.github.io/bootstrap/][Twitter Bootstrap]]
+* Part One: Build an Rails application with
+
+  Let's build an example Rails application with a 'home'
+  controller and 'home/index', "home/about", "home/contact" pages.
+  
   1. [ ] Initialize a new Rails application
      #+BEGIN_SRC sh
        rails new bootstrap_tutorial
@@ -69,3 +73,8 @@
      Now, Rails will direct vistors to the application to home/index. We are
      ready to start the Rails application and incorporate Twitter Bootstap's
      stylesheets and JavaScript scripts.
+  9. [ ] Start the rails server
+     #+BEGIN_SRC sh
+       rails server --port 3000
+     #+END_SRC
+* Part Two: Incorporate [[http://twitter.github.io/bootstrap/][Twitter Bootstrap]]'s CSS style sheets and JavaScript scripts.
